fixing 'z-index' values to make the site more bullet proof

--- a/app/assets/stylesheets/partials/abstractions/_dropdown.scss
+++ b/app/assets/stylesheets/partials/abstractions/_dropdown.scss
@@ -22,7 +22,7 @@
   .js .drop-down {
     display: none;
     position: absolute;
-    z-index: $z-index-max;
+    z-index: $z-index-high;
     top: 100%;
     left: 0;
   }
